simplify code around serialization of dates, add test for stream code to find and fix a bug around this